force-app/main/default/objects/Case/fields/PotentialLiability__c.field-meta.xml
<CustomField>
    <fullName>PotentialLiability__c</fullName>
    <label>Potential Liability</label>
    <picklist>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>