force-app/main/default/objects/Case/fields/Product__c.field-meta.xml
<CustomField>
    <fullName>Product__c</fullName>
    <label>Product</label>
    <picklist>
        <picklistValues>
            <fullName>GC1040</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC1060</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC3020</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC3040</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC3060</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC5020</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC5040</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC5060</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>GC1020</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>