force-app/main/default/objects/Case/fields/SLAViolation__c.field-meta.xml
<CustomField>
    <fullName>SLAViolation__c</fullName>
    <label>SLA Violation</label>
    <picklist>
        <picklistValues>
            <fullName>No</fullName>
        </picklistValues>
        <picklistValues>
            <fullName>Yes</fullName>
        </picklistValues>
    </picklist>
    <type>Picklist</type>
</CustomField>